<resources>
    <string name="app_name">Commerce</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="card_holder">Titular do Cartão</string>
    <string name="card_number">Número do Cartão</string>
    <string name="card_brand">Bandeira</string>
    <string name="expiration_month">Mês Venc</string>
    <string name="expiration_year">Ano Venc</string>
    <string name="CVV">CVV</string>
    <string name="btn_new_card">Salvar</string>








</resources>
